# Colorpl

./: .gitignore  Dockerfile  README.md  asd.py  culture.places_collection.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.gitlab/merge_request_templates/: android.md  default.md
BE/: auth_utils.py  base.py  database.py  main.py  main2.py  models.py  schemas.py  token.py
BE2/: Dockerfile  Jenkinsfile  Jenkinsfile2  alembic.ini  main.py  main2.py  mock_data.py  requirements.txt  show.py
BE2/CS/: bn.py  crud.py  database.py  dependencies.py  models.py  routes.py  schemas.py
BE2/alembic/: env.py
BE2/auth/: database.py  dependencies.py  routes.py  schemas.py  show.py  utils.py
BE2/common/: config.py  dependencies.py  security.py  show.py
BE2/cs2/: bn.py  create_mock_data.py  crud.py  database.py  models.py  schemas.py
BE2/tests/: test_main.py
BE2/vm/: crud.py  database.py  models.py  routes.py  schemas.py
Colorpl-Android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
Colorpl-Android/core/: .gitignore  build.gradle.kts  google-services.json
Colorpl-Android/data/: build.gradle.kts
Colorpl-Android/domain/: build.gradle.kts
Colorpl-Android/gradle/: libs.versions.toml
Colorpl-Android/presentation/: build.gradle.kts
Colorpl-Backend/: .gitignore  build.gradle  local.properties  settings.gradle
FE/: package-lock.json  package.json
FE/demo/: package-lock.json  package.json
app/: database.py  dockerfile  gunicorn_conf.py  main.py  models.py  requirements.txt
app/auth/: create_tables.py  database.py  models.py  (+4 more)
(+1174 files in other folders)
