[tool.poetry]
name = "admin-setting"
version = "1.8.3"
description = "admin_setting"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "^0.75.0"
uvicorn = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
